# python-cookiecutter

./: LICENCE  README.md  cookiecutter.json
.github/workflows/: test.yml
hooks/: post_gen_project.py
tests/: context.yaml
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: cookiecutter.yml  dependencies.yml  deploy_service.yml  docs.yml  release.yml  test.yml
{{cookiecutter.project_slug}}/docs/: api_docs.md
{{cookiecutter.project_slug}}/src/: main.py
